# core

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adr-request.md  bug.md  sprint-task.md
.github/workflows/: anchor.yml  ci.yml  verifier.yml
.loop-state/: .gitkeep
apps/api/: README.md  package.json  wrangler.toml
apps/mcp/: README.md  package.json  tsconfig.json  wrangler.toml
apps/verifier/: README.md  next.config.ts  package.json  tsconfig.json  wrangler.jsonc
apps/web/: .env.example  README.md  next.config.ts  package.json  tsconfig.json  wrangler.jsonc
apps/worker/: README.md  package.json  wrangler.toml
docs/: 00-vision.md  01-spec.md  02-architecture.md  03-symphony-harness.md  04-roadmap.md  05-hackathon-strategy.md  06-docuseal-reuse.md  PRODUCT-FLOW.md  README.md
docs/05-sprints/: README.md  SPRINT-0.md  SPRINT-1.md  SPRINT-2.md  SPRINT-3.md  SPRINT-4.md
docs/adr/: 0004-encryption-strategy.md  (+9 more)
harness/: README.md  config.yaml  orchestrator.md
programs/yoursign/: Anchor.toml  Cargo.toml  README.md
programs/yoursign/src/: canonical.rs  errors.rs  lib.rs  state.rs
programs/yoursign/tests/: agent-flow.test.ts  vitest.config.ts
scripts/: autonomous-loop.sh  bootstrap.sh  demo-agent-flow.ts  deploy-devnet.sh  init-tool-manifest.ts  seed-sprint-issues.sh  setup-solana.sh  smoke-test.sh  squads-bootstrap.sh
(+67 files in other folders)
